# moss-ci

./: .gitignore  LICENSE  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: moss-ci.yml
alembic/: env.py
docs/: PROJECT_STATE.md  PR_BODY.md  USAGE.md
docs/superpowers/plans/: 2026-07-10-moss-ci-implementation.md
examples/: e2e_scenario.yaml  llm_judge.yaml  moss_capabilities.yaml  moss_smoke.yaml  simple_assert.yaml  tool_check.yaml
examples/fixtures/: buggy.py  secret_config.json  test_buggy.py  to_transform.txt
moss_ci/: __init__.py
moss_ci/api/: __init__.py  schemas.py  server.py
moss_ci/api/routes/: runs.py
moss_ci/cli/: __init__.py  main.py
moss_ci/engine/: __init__.py  diff.py  executor.py  flake.py  pipeline.py  scheduler.py
moss_ci/evaluator/: __init__.py  base.py  contains.py  llm_judge.py  registry.py  side_effect.py  tool_args.py  tool_sequence.py
moss_ci/models/: __init__.py  pipeline.py  result.py  test.py
moss_ci/parser/: __init__.py  yaml_parser.py
moss_ci/runner/: __init__.py  api_backend.py  base.py  cli_backend.py  sdk_backend.py
moss_ci/storage/: __init__.py  cache.py  db.py  models.py  object_store.py  repository.py
moss_ci/web/: index.html  package-lock.json  package.json
tests/: __init__.py  conftest.py  test_api.py  test_api_advanced.py  test_cli.py  test_cli_backend_session.py  test_diff.py  test_engine.py  test_evaluator.py  test_flake.py  test_models.py  test_parser.py  test_runner.py  test_runner_backends.py  test_storage_db.py  test_storage_ext.py  test_switchover.py
(+8 files in other folders)
